/*
 * Copyright 1999-2020 Alibaba Group Holding Ltd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "RedNb.Nacos.Remote.Grpc.Proto";

import "google/protobuf/any.proto";

// Metadata for the payload
message Metadata {
  // Request type, such as "ConfigQueryRequest", "InstanceRequest", etc.
  string type = 3;
  // Client IP address
  string clientIp = 8;
  // Additional headers
  map<string, string> headers = 7;
}

// Payload is the main message structure for gRPC communication
message Payload {
  // Metadata containing request type and headers
  Metadata metadata = 2;
  // Body contains the actual request/response data
  google.protobuf.Any body = 3;
}

// Request service for unary requests
service RequestService {
  // Sends a common request
  rpc SendRequest (Payload) returns (Payload);
}

// BiRequestStream service for bidirectional streaming
service BiRequestStreamService {
  // Sends a bidirectional stream request
  rpc RequestBiStream (stream Payload) returns (stream Payload);
}
